@@ -127,7 +127,7 @@ class Base(zeit.web.core.view.Base):
             item = next((items[key].text, key) for key in items.keys() if (
                         self.ressort in key))
             if self.sub_ressort != '' and len(items[item[1]]):
-                items = items[item[1]].items()
+                items = items[item[1]]
                 item = next((items[key].text, key) for key in items.keys() if (
                             self.sub_ressort in key))
         except StopIteration:
